--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 #           - Also handy if you have a lage number of dependant pods
 #           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGONRE THE LOCK FILE
 Pods/
+Podfile.lock
 
 ### Objective-C ###
 # Xcode
