--- a/GithubViewer/Podfile
+++ b/GithubViewer/Podfile
@@ -8,5 +8,5 @@ target 'GithubViewer' do
   # Pods for GithubViewer
   pod 'RxSwift', '4.0.0'
   pod 'RxCocoa', '4.0.0'
-
+  pod 'RxDataSources', '3.0'
 end
